# velostra

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
brand/: README.md
config/: mainnet-authority-plan.example.json  mainnet-canary-policy.example.json  mainnet-deployment-plan.example.json  mainnet-environment-isolation.example.json  mainnet-readiness-input.example.json  mainnet-readiness-packet.schema.json  performance-budgets.json  phase2-evidence-manifest.example.json  phase2-slos.json  phase3-canary-policy.example.json  phase3-canary-summary.example.json  phase3-catchup-evidence.example.json  phase3-operational-snapshot.example.json  phase3-release-input.example.json  phase3-release-manifest.schema.json
contracts/: .env.example  .gitignore  VelostraEscrow.sol  package-lock.json  package.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_READINESS.md  BUILDER_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  JOURNEY.md  MAINNET_READINESS.md  MANAGED_EVIDENCE.md  METAMASK_DEPENDENCY_DISPOSITION.md  OPERATIONS.md  PHASE_1_HANDOFF.md  PHASE_4_CONTRACT.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SMART_CONTRACT.md  STATUS.md  TESTING.md  THREAT_MODEL.md
public/: _headers  _redirects  robots.txt  site.webmanifest  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/velostra/: __init__.py  client.py  signing.py
sdk/python/tests/: test_contract.py
(+300 files in other folders)
