[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "velostra"
version = "0.1.0"
description = "Typed Python SDK for the Velostra verified execution platform."
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "Velostra" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
